            - Renamed dumpConstruction() to source(), and extended it to produce
              either C++ and Python code via an optional language argument.
              The old C++-only dumpConstruction() is kept but deprecated.
              Also fixed a problem where the C++ initialiser lists were empty
              (instead of containing a single 0) for zero-crossing components.
        Class LockViolation:
            - New exception class used when the user attempts to change a
              locked simplex or facet.
        Class Matrix<T>:
            - Added a copy constructor that takes a matrix whose elements are
              of a different type.
            - Added destructive and non-destructive rank() functions.
            - New routines negateRow() and negateCol().
            - New routine initialised().
            - Renamed initialise() to fill(), to make it clear that this has
              nothing to do with initialised vs uninitialised matrices.
              The old name is kept but deprecated.
        Enum NamedPermGroup:
            - This is now a scoped enumeration, for better type safety.
              The old enum constants (e.g., PERM_GROUP_TRIVIAL) have been
              renamed as scoped enum values (e.g., NamedPermGroup::Trivial).
              The old names have been kept as deprecated compile-time constants
              in the regina:: namespace.
        Class NativeInteger<bytes>:
            - New routine str().
        Enum NiceType:
            - This is now a scoped enumeration, for better type safety.
              The old enum constants (e.g., NICE_INTRODUCE) have been
              renamed as scoped enum values (e.g., NiceType::INTRODUCE).
              The old names have been kept as deprecated compile-time constants
              in the regina:: namespace.
        Class NormalSurface, NormalHypersurface:
            - Fixed a bug where, if a surface was a normalised triangle link